--- a/index.html
+++ b/index.html
@@ -104,8 +104,8 @@ author_profile: true
 
 
                 <hr>
-
-                    <b>About this website:</b> This website uses code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and is inspired by Shiro Kuriwake's website.
+		<small> <p>
+                    <b>About this website:</b> Website code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and is inspired by Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
                   </small></p>
 
                 </section>
