--- a/index.html
+++ b/index.html
@@ -105,7 +105,7 @@ author_profile: true
 
                 <hr>
 		<small> <p>
-                    <b>About this website:</b> Website code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and is inspired by Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
+                    <b>About this website:</b> Code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
                   </small></p>
 
                 </section>
