--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023.</li>
+          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">pdf</a>]</li>
 
                <details><summary>Abstract</summary>
 
@@ -23,7 +23,7 @@ author_profile: true
 
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019.</li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>]</li>
 
                <details><summary>Abstract</summary>
 
