changes to index

--- a/index.html
+++ b/index.html
@@ -104,9 +104,9 @@ author_profile: true
 
 
                 <hr>
-		<small> <p>
+		<small> <small> <p>
                     <b>About this website:</b> Code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
-                  </small></p>
+                </small> </small>s</p>
 
                 </section>
               </div>
