--- a/index.html
+++ b/index.html
@@ -101,12 +101,12 @@ author_profile: true
 
 	</ul>
                 <hr>
-		<small> <p>
+		<small> 
 		<b> <a href="https://proud-share-881.notion.site/Papers-2e3a7faf914c4ae8b7b35d8199e19e74?pvs=4"> Paper notes </a> </b> and <b> <a href="https://proud-share-881.notion.site/Books-99d67e82da53424eb0e8b3c4a972ca2f?pvs=4"> reading </a> </b>
-		</small> </p>
-		<small> <small> <p>
+		</small> 
+		<small> <small> 
                     <b>About this website:</b> Code from <a href="https://github.com/mmistakes/minimal-mistakes">Minimal Mistakes</a> and Shiro Kuriwake's <a href = "https://www.shirokuriwaki.com/">website</a>.
-                </small> </small></p>
+                </small> </small>
 
                 </section>
               </div>
