changes to index

--- a/index.html
+++ b/index.html
@@ -11,8 +11,9 @@ author_profile: true
       </div>
       <p>
         <ul class="dashed">
+	<p> * = denotes first author publication
 
-          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">pdf</a>]</li>
+          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">pdf</a>] * </li>
 
                <details><summary>Abstract</summary>
 
@@ -23,13 +24,12 @@ author_profile: true
 
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>]</li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] <i> Invited paper. * <i></li>
 
                <details><summary>Abstract</summary>
 
-                <p> Ensuring reliable and affordable access to modern energy services, especially for the poorer and deprived section of the population, is a basic requisite for sustainable development. Given that a majority of the energy-deprived population lives in rural regions of developing countries, an effective rural electrification is critical for bridging the rural-urban divide. Building on energy access intervention, implementing productive energy services can influence the next stages of development through livelihood activities, microenterprises, lifestyle energy services, value-added activities, survival irrigation, and so on. Social benefits of access to healthcare, education, and longer productive hours have an equally important impact on sustainable development. In India, for example, 240 million people lack electricity access. While grid extension in India is on the rise through various government programs, specific rural problems of low energy demand, poor rural economy, inaccessible terrain, and low purchasing power can render grid extension expensive and inefficient. Microgrid electricity systems, especially with hybrid renewable energy resources, can be a good alternative for addressing above-mentioned challenges. India enjoys high solar intensity, and the predominantly agrarian rural society has enough biomass resources, abundant cattle dung, forest foliage, and agricultural waste. A solar-biomass hybrid electricity system can solve the problem of intermittency of solar. Such a hybrid electricity system is being implemented in a remote Indian unelectrified village for electricity access, livelihoods, and economic empowerment. In this paper, we report the techno-economic feasibility and sustainability analysis of this hybrid system. The system consists of 30-kW solar photo voltaic (PV) and 20-kW biomass gasifier modules. Energy demand and resource availability are estimated with inputs from extensive stakeholder discussions and field surveys, and they account for daily and seasonal variations in both supply and end uses and availability and productive hours. The expected temporal electricity demand is estimated for households, community, irrigation, and commercial needs. The techno-economic feasibility is assessed using hybrid optimization model for electric renewable energy (HOMER). Furthermore, opportunities for the development of productive uses and their expansion through a sustainable business model are explored.</p>
+                <p> Ensuring reliable and affordable access to modern energy services, especially for the poorer and deprived section of the population, is a basic requisite for sustainable development. Given that a majority of the energy-deprived population lives in rural regions of developing countries, an effective rural electrification is critical for bridging the rural-urban divide. Microgrid electricity systems, especially with hybrid renewable energy resources, can be a good alternative for centralized electricity grid expansion. In this paper, we report the techno-economic feasibility and sustainability analysis of a hybrid solar-biomass system in India. The system consists of 30-kW solar photo voltaic (PV) and 20-kW biomass gasifier modules. Energy demand and resource availability are estimated with inputs from extensive stakeholder discussions and field surveys, and they account for daily and seasonal variations in both supply and end uses and availability and productive hours. The expected temporal electricity demand is estimated for households, community, irrigation, and commercial needs. Furthermore, opportunities for the development of productive uses and their expansion through a sustainable business model are explored.</p>
 		</details>
-
 
 	</ul>
 
@@ -39,7 +39,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i>In review</i></b>.</li>
+          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -47,7 +47,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i>In review</i></b>.</li>
+          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -55,7 +55,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Pathways to Zero Emissions in California’s Light-Duty Transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
+          <li> <a> Pathways to Zero Emissions in California’s Light-Duty Transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -80,7 +80,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a>Designing Efficient and Equitable Retail Rate for Distributed Energy Resources. [with Bruce Cain, In&#234s Azevedo]</a></li>
+          <li> <a>Designing Efficient and Equitable Retail Rate for Distributed Energy Resources. [with Bruce Cain, In&#234s Azevedo]</a> * </li>
 
                <details><summary>Abstract</summary>
 
@@ -88,7 +88,7 @@ author_profile: true
 
 	</details>
 
-          <li> <a> What's happening to California's Electricity prices? A Primer [with Bruce Cain, In&#234s Azevedo]</a></li>
+          <li> <a> What's happening to California's Electricity prices? A Primer [with Bruce Cain, In&#234s Azevedo]</a> * </li>
 
                <details><summary>Abstract</summary>
 
