--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@ author_profile: true
 
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] <i> Invited paper. * <i></li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] <i> Invited paper. <i> * </li>
 
                <details><summary>Abstract</summary>
 
@@ -80,7 +80,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a>Designing Efficient and Equitable Retail Rate for Distributed Energy Resources. [with Bruce Cain, In&#234s Azevedo]</a> * </li>
+          <li> <a>Designing Efficient and Equitable Retail Rate for Distributed Energy Resources. [with Bruce Cain, In&#234s Azevedo]</a> </li>
 
                <details><summary>Abstract</summary>
 
@@ -88,7 +88,7 @@ author_profile: true
 
 	</details>
 
-          <li> <a> What's happening to California's Electricity prices? A Primer [with Bruce Cain, In&#234s Azevedo]</a> * </li>
+          <li> <a> What's happening to California's Electricity prices? A Primer [with Bruce Cain, In&#234s Azevedo]</a> </li>
 
                <details><summary>Abstract</summary>
 
