changes to index

--- a/index.html
+++ b/index.html
@@ -24,14 +24,22 @@ author_profile: true
 
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [With P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] <i> (Invited paper) </I> * </li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] <i> (Invited paper) </I> * </li>
 
                <details><summary>Abstract</summary>
 
                 <p> Ensuring reliable and affordable access to modern energy services, especially for the poorer and deprived section of the population, is a basic requisite for sustainable development. Given that a majority of the energy-deprived population lives in rural regions of developing countries, an effective rural electrification is critical for bridging the rural-urban divide. Microgrid electricity systems, especially with hybrid renewable energy resources, can be a good alternative for centralized electricity grid expansion. In this paper, we report the techno-economic feasibility and sustainability analysis of a hybrid solar-biomass system in India. The system consists of 30-kW solar photo voltaic (PV) and 20-kW biomass gasifier modules. Energy demand and resource availability are estimated with inputs from extensive stakeholder discussions and field surveys, and they account for daily and seasonal variations in both supply and end uses and availability and productive hours. The expected temporal electricity demand is estimated for households, community, irrigation, and commercial needs. Furthermore, opportunities for the development of productive uses and their expansion through a sustainable business model are explored.</p>
 		</details>
 
+
+
+          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next- Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">pdf</a>] <i> (Invited paper) </I> * </li>
+
+
+
 	</ul>
+
+
 
       <div align="left">
         <h3 id="pubs">In review/submission</h3>
@@ -63,7 +71,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Pathways to Zero Emissions in California’s Heavy-Duty Transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
+          <li> <a> Pathways to zero emissions in California’s heavy-duty transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
 
                <details><summary>Abstract</summary>
 
@@ -80,7 +88,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a>Designing Efficient and Equitable Retail Rate for Distributed Energy Resources. [with Bruce Cain, In&#234s Azevedo]</a> </li>
+          <li> <a>Designing efficient and equitable retail rate for distributed energy resources. [with Bruce Cain, In&#234s Azevedo]</a> </li>
 
                <details><summary>Abstract</summary>
 
@@ -88,11 +96,21 @@ author_profile: true
 
 	</details>
 
-          <li> <a> What's happening to California's Electricity prices? A Primer [with Bruce Cain, In&#234s Azevedo]</a> </li>
+          <li> <a> Why are California's electricity prices so high? A primer. [with Bruce Cain, In&#234s Azevedo]</a> </li>
 
                <details><summary>Abstract</summary>
 
-                <p> California has taken great strides in modernizing and decarbonizing its electricity system. The state has one of the least carbon intensive electricity and has the largest adoption of grid-scale storage (3,136 MW), residential rooftop (13,064 MW), and zero emissions vehicles (18% of total sales) in the country. Despite high economic growth, electricity consumption has remained constant due to improvements in energy efficiency, structural changes in economy, and the state’s moderate climate. These improvements are accompanied by challenges to the electricity grid operations and costs. The famous ‘duck-curve’ of California’s is now akin to a ‘canyon-curve’ as mid-day net load drops to zero due to high solar resources and ramps to morning and evening peaks challenging grid planners. Electricity is costly in California -- customers in the three investor-owned utilities area pay 45% -100% more than the national average per kilowatt hour. State’s core strategy to achieve net-zero emissions by 2045 relies on electrifying end-uses such as transportation and heating which would be less favorable for consumer with high electricity prices. This primer is an attempt to parse out different reasons for increasing electricity rates. Few questions of interest were : what are the major drivers for increasing costs for utilities? How have total electricity sales within different subsectors changed? How will electrification of transportation and heating affect the network infrastructure and socio-economic inequities in the state? </p>
+                <p> California has taken great strides in modernizing and decarbonizing its electricity system. The state has one of the least carbon intensive electricity and has the largest adoption of grid-scale storage (3,136 MW), residential rooftop (13,064 MW), and zero emissions vehicles (18% of total sales) in the country. At the same time, electricity is expensive in California. Customers in three investor-owned utilities pay 45-100% more than national average per kilowatt hour. This primer parses out reasons for California's high electricity prices using data on revenue requirements, rate of return, trends in electricity generation, network, and wildfire mitigation costs, and distribution upgrades. </p>
+
+	</details>
+
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> </li>
+
+               <details><summary>Abstract</summary>
+
+                <p> The design of residential electricity rates varies across the United States. Some utilities charge fixed charge as well as volumetric rate, whereas others include only a volumetric rate which can change depending on the time of the day and total electricity consumption. The average values of electricity rates per kWh consumed ranges from 12.7 to 47.7 cents across the U.S. Other differences across states include subsidy for low-income, real-time prices, time-of use-prices, and special retail rates for distributed energy resources and electric vehicle charging. Despite the varying designs in electricity rates, there are commonalities on the goals of electricity service provision by utilities, such as providing electricity in a reliable way, while recovering generation, transmission, and distribution costs of electricity. In regions where constant volumetric rates are used, these costs are lumped together often failing to reflect the true social marginal costs of electricity. In most regions, utility revenue requirements will likely continue to increase as end-uses electrify and electricity decarbonizes. Progress in rate reform
+and utility innovation has been slow, with less than 1% of Americans face an electricity price that varies with time, and the implications of different designs of electricity rate designs for consumers is poorly understood. In this perspective, we discuss the challenges and progress in designing an efficient and equitable retail rate for a decarbonizing grid. Specifically, we delve into two aspects of retail rate design: one, how do we make efficient retail rates – i.e., rates that reflect the varying social marginal cost of electricity, recoup required costs, and enable proper utilization of the grid infrastructure, and second, are current and new retail rates designs equitable, particularly with bill impacts across income and race gradients. Given California’s high and increasing retail rates, high distributed energy generation and EV penetration, and rising utility related wildfire risk, we also discuss the case of California, using it as a case study with potentially generalizable results across the country
+ </p>
 
 	</details>
 
