changes to index

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@ author_profile: true
 
 
 
-          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next- Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">pdf</a>] <i> (Invited paper) </I> * </li>
+          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next- Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">pdf</a>] </li>
 
 
 
