changes to index

--- a/index.html
+++ b/index.html
@@ -7,11 +7,12 @@ author_profile: true
   <section>
 
       <div align="left">
+	<p> * denotes first author publication
+
         <h3 id="pubs">Peer-Reviewed Publications</h3>
       </div>
       <p>
         <ul class="dashed">
-	<p> * = denotes first author publication
 
           <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">pdf</a>] * </li>
 
@@ -55,7 +56,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
+          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -63,7 +64,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Pathways to Zero Emissions in California’s Light-Duty Transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
+          <li> <a> Pathways to zero emissions in California's light-duty transportation sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
