--- a/index.html
+++ b/index.html
@@ -64,7 +64,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Pathways to zero emissions in California's light-duty transportation sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
+          <li> <a> Pathways to zero emissions in California's light-duty transportation sector. [With Eleanor Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -72,7 +72,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Pathways to zero emissions in California’s heavy-duty transportation Sector. [With Nora Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
+          <li> <a> Pathways to zero emissions in California’s heavy-duty transportation Sector. [With Eleanor Henessey, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
 
                <details><summary>Abstract</summary>
 
