changes to index.html

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
+          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> Revisions at Nature Scientific Reports</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
@@ -56,7 +56,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i>In review</i></b>. * </li>
+          <li> <a> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i> Revisions at Environmental Research Letters</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
