--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> Revisions at Nature Scientific Reports</i></b>. * </li>
+          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> In press at Nature Scientific Reports</i></b>. * </li>
 
                <details><summary>Abstract</summary>
 
