--- a/Papers/CEF/Blog.html
+++ b/Papers/CEF/Blog.html
@@ -11,6 +11,7 @@
     p.p2 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Helvetica Neue'}
     p.p3 {margin: 0.0px 0.0px 0.0px 0.0px; font: 12.0px 'Helvetica Neue'; min-height: 14.0px}
     p.p4 {margin: 0.0px 0.0px 0.0px 48.0px; text-indent: -24.0px; font: 12.0px 'Helvetica Neue'; color: #000000; -webkit-text-stroke: #000000}
+    p.p5 {margin: 0.0px 0.0px 0.0px 48.0px; text-indent: -24.0px; font: 12.0px 'Helvetica Neue'; color: #000000; -webkit-text-stroke: #000000; min-height: 14.0px}
     span.s1 {font-kerning: none}
     span.Apple-tab-span {white-space:pre}
   </style>
@@ -30,6 +31,8 @@
 <p class="p4"><span class="s1">1)     Introduce Critical Emissions Factors (CEFs), defined as the electricity emissions intensity that needs to be achieved during charging to ensure that electric vehicles achieve lifecycle greenhouse gas emissions parity with some of the most efficient gasoline hybrids in the United States.<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1">2)     Identify regions that have achieved the required CEFs for vehicle pairs and regions that will require further emissions reductions to do so.<span class="Apple-converted-space"> </span></span></p>
 <p class="p4"><span class="s1">3)     Update previous results of comparative lifecycle emissions between electric vehicles and gasoline hybrids as presented in Yuksel et al. (cite) using new data.</span></p>
-<p class="p4"><span class="s1">&lt;/p&gt;</span></p>
+<p class="p5"><span class="s1"></span><br></p>
+<p class="p4"><span class="s1">&lt;/body&gt;</span></p>
+<p class="p4"><span class="s1">&lt;/html&gt;</span></p>
 </body>
 </html>
