--- a/Papers/CEF/Blog.html
+++ b/Papers/CEF/Blog.html
@@ -5,6 +5,8 @@ layout: default
 
 <div class="wrapper">
 
+<section>
+
 
 
 
@@ -16,5 +18,5 @@ vehicle differs by location and time of charging. In this work, we:
 1)     Introduce Critical Emissions Factors (CEFs), defined as the electricity emissions intensity that needs to be achieved during charging to ensure that electric vehicles achieve lifecycle greenhouse gas emissions parity with some of the most efficient gasoline hybrids in the United States. 
 2)     Identify regions that have achieved the required CEFs for vehicle pairs and regions that will require further emissions reductions to do so. 
 3)     Update previous results of comparative lifecycle emissions between electric vehicles and gasoline hybrids as presented in Yuksel et al. (cite) using new data.
-
+</section>
 </div>
