--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> In press at Nature Scientific Reports</i></b>.[<a href="/Papers/CEF/Blog.html">blog</a>] * </li>
+          <li> <a> How clean does the U.S. electricity grid need to be to ensure electric vehicles reduce greenhouse gas emissions when compared to hybrid gasoline vehicles? [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> In press at Nature Scientific Reports</i></b>.[<a href="/Papers/CEF/Blog.md">blog</a>] * </li>
 
                <details><summary>Abstract</summary>
 
