--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@ author_profile: true
       <p>
         <ul class="dashed">
 
-          <li> <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad2a1f"> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. [With Chris Tessum, Julian Marshall, In&#234s Azevedo] </a><b><i> Environmental Research Letters</i></b>. 2024. *  [<a href="/Papers/Distributional_effects/Paper.pdf">Paper</a>] [<a href="/Papers/Distributional_effects/SI.pdf">SI</a>] </li>
+          <li> <a href="https://iopscience.iop.org/article/10.1088/1748-9326/ad2a1f"> Distributional impacts of fleet-wide change in light duty transportation: mortality risks of PM2.5 emissions from electric vehicle and Tier 3 conventional vehicles. </a>[With Chris Tessum, Julian Marshall, In&#234s Azevedo] <b><i> Environmental Research Letters</i></b>. 2024. *  [<a href="/Papers/Distributional_effects/Paper.pdf">Paper</a>] [<a href="/Papers/Distributional_effects/SI.pdf">SI</a>] </li>
 
                <details><summary>Abstract</summary>
 
@@ -22,7 +22,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid [with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] </a><b><i> Nature Scientific Reports</i></b>. 2024. * [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] * </li>
+          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid. </a>[with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] <b><i> Nature Scientific Reports</i></b>. 2024. * [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] * </li>
 
                <details><summary>Abstract</summary>
 
