--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid. </a>[with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] <b><i> Nature Scientific Reports</i></b>. 2024. * [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] * </li>
+          <li> <a href="https://www.nature.com/articles/s41598-024-51697-1"> Ensuring greenhouse gas reductions from electric vehicles compared to hybrid gasoline vehicles requires a cleaner U.S. electricity grid. </a>[with Tugce Yuksel, Jeremy Michalek, In&#234s Azevedo] <b><i> Nature Scientific Reports</i></b>. 2024. * [<a href="/Papers/CEF/Paper.pdf">Paper</a>] [<a href="/Papers/CEF/SI.pdf">SI</a>] [<a href="/Papers/CEF/Blog.pdf">Blog</a>] </li>
 
                <details><summary>Abstract</summary>
 
