--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@ author_profile: true
 		</details>
 
 
-          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">pdf</a>] * </li>
+          <li> <a href="https://doi.org/10.32866/001c.74975">How Differential Privacy Will Affect Estimates of Air Pollution Exposure and Disparities in the United States</a>. <b><i>Findings</i></b>. 2023. [<a href="/Papers/dp_air_quality.pdf">Paper</a>] * </li>
 
                <details><summary>Abstract</summary>
 
@@ -40,10 +40,10 @@ author_profile: true
 
 
 
-          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next-Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">pdf</a>] </li>
+          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next-Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">Paper</a>] </li>
 
 
-          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">pdf</a>] * </li>
+          <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] * </li>
 
                <details><summary>Abstract</summary>
 
