--- a/index.html
+++ b/index.html
@@ -68,7 +68,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in review at Progress in Energy </i></b>. [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] * </li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in review at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] * </li>  
               <details><summary>Abstract</summary>
 
 
