--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@ author_profile: true
   <section>
 
       <div align="left">
-	<p> * denotes first author publication
+	<p> <b>* denotes first author publication </b>
 
         <h3 id="pubs">Peer-Reviewed Publications</h3>
       </div>
@@ -39,16 +39,27 @@ author_profile: true
 		</details>
 
 
-
-          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next-Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">Paper</a>] </li>
-
-
           <li> <a href="https://doi.org/10.1109/JPROC.2019.2910834">Microhybrid Electricity System for Energy Access, Livelihoods, and Empowerment</a>. [with P Balachandra]. <b><i>Proceedings of the IEEE</i></b>. 2019. [<a href="/Papers/Microhybrid_Electricity_System_for_Energy_Access_Livelihoods_and_Empowerment.pdf">Paper</a>] * </li>
 
                <details><summary>Abstract</summary>
 
                 <p> Ensuring reliable and affordable access to modern energy services, especially for the poorer and deprived section of the population, is a basic requisite for sustainable development. Given that a majority of the energy-deprived population lives in rural regions of developing countries, effective rural electrification is critical for bridging the rural-urban divide. Microgrid electricity systems, especially with hybrid renewable energy resources, can be a good alternative for centralized electricity grid expansion. In this paper, we report the techno-economic feasibility and sustainability analysis of a hybrid solar-biomass system in India. The system consists of 30-kW solar photovoltaic (PV) and 20-kW biomass gasifier modules. Energy demand and resource availability are estimated with inputs from extensive stakeholder discussions and field surveys, and they account for daily and seasonal variations in both supply and end uses and availability and productive hours. The expected temporal electricity demand is estimated for households, communities, irrigation, and commercial needs. Furthermore, opportunities for the development of productive uses and their expansion through a sustainable business model are explored.</p>
 		</details>
+
+
+
+
+          <li> <a href='https://iopscience.iop.org/article/10.1088/2634-4505/ad54ed"> Pathways to zero emissions in California’s heavy-duty transportation Sector. </a> [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] <b><i> Environmental Research: Infrastructure and Sustainability </i></b>. [<a href="/Papers/stock_flow/Hennessy_2024_truck_retirement.pdf">Paper</a>] </li>. 2024.
+
+               <details><summary>Abstract</summary>
+
+                <p> California contributes 0.75% of global greenhouse gas (GHG) emissions and has a target of reaching economy-wide net zero emissions by 2045, requiring all sectors to rapidly reduce emissions. Nearly 8% of California's GHG emissions are from the heavy-duty transportation sector. In this work, we simulate decarbonization strategies for the heavy-duty vehicle (HDV) fleet using detailed fleet turnover and air quality models to track evolution of the fleet, GHG and criteria air pollutant emissions, and resulting air quality and health impacts across sociodemographic groups. We assess the effectiveness of two types of policies: zero emission vehicle sales mandates, and accelerated retirement policies. For policies including early retirements, we estimate the cost of early retirements and the cost-effectiveness of each policy. We find even a policy mandating all HDV sales to be zero emission vehicles by 2025 would not achieve fleetwide zero emissions by 2045. For California to achieve its goal of carbon neutrality, early retirement policies are needed. We find that a combination of early retirement policies and zero emission vehicle sales mandates could reduce cumulative CO2 emissions by up to 64%. Furthermore, we find that decarbonization policies will significantly reduce air pollution-related mortality, and that Black, Latino, and low-income communities will benefit most. We find that policies targeting long-haul heavy-heavy duty trucks would have the greatest benefits and be most cost-effective.
+
+. </p>
+		</details>
+
+
+          <li> <a href="https://dx.doi.org/10.1021/acsenergylett.9b02574">Performance Metrics Required of Next-Generation Batteries to Electrify Commercial Aircraft</a>. [with Alexander Bills, Shashank Sripad, William Leif Fredericks, Venkat Vishwanathan]. <b><i>ACS Energy Letters</i></b>. 2020. [<a href="/Papers/battery_electric_aviation.pdf">Paper</a>] </li>
 
 
 
@@ -68,7 +79,7 @@ author_profile: true
 
 
 
-          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in review at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] * </li>  
+          <li> <a> Equitable retail rates for a decarbonized and resilient electricity system. [with Bruce Cain, In&#234s Azevedo]</a> <b><i> in revision at Progress in Energy </i></b> [<a href="/Papers/RateDesign/Draft_Perspective.pdf">Draft</a>] * </li>  
               <details><summary>Abstract</summary>
 
 
@@ -87,13 +98,6 @@ and utility innovation has been slow, with less than 1% of Americans facing an e
                 <p> The state of California has ambitious climate and public health targets, including reaching a net-zero emissions economy by 2045. In this work we explore pathways to achieve zero emissions in California’s light-duty transportation sector, responsible for 28% of the state’s emissions. We establish a business-as-usual trajectory and focus on fleet turnover dynamics under different policy scenarios. Specifically, we consider the following policies and their combination: (i) a zero-emissions vehicles (ZEV) sales mandate and (ii) accelerated retirement of internal combustion vehicles (ICV). We simulate scenarios with varying ZEV mandate onset, retirement year, and retirement age to find cumulative CO2 and PM2.5 emissions, premature mortality, and environmental justice impacts. We discuss the implications of delaying the start of these policies as well as benefits and costs associated with accelerated retirement by monetizing climate and health benefits and using second-hand vehicle prices as a proxy for costs. We find that 20% of the 2019 ICV fleet will remain on the road in 2045 even if California achieves 100% ZEV sales by 2035. Given the status quo, retiring vehicles above the age of 10 starting in 2040 have positive net benefits. These scenarios reduce GHG emissions by 35% and premature mortality by 23% compared to BAU. Retirements of vehicles 10 years and above starting in 2025 yield net benefits if the social cost of carbon is doubled. These scenarios reduce cumulative emissions and mortality by 50%. Retiring vehicles of age 5 and above isn’t cost-effective in almost all scenarios. </p>
 		</details>
 
-
-          <li> <a> Pathways to zero emissions in California’s heavy-duty transportation Sector. [With Eleanor Hennessy, Sarah Saltzer, In&#234s Azevedo] </a><b><i>In submission</i></b>.</li>
-
-               <details><summary>Abstract</summary>
-
-                <p> As the world’s 5th largest economy, California contributes to roughly ¾ of a percent of global greenhouse gas emissions (GHGs) and has ambitious climate targets including a goal of reaching economy-wide net zero GHGs by 2045. To achieve this goal, all sectors of the economy will need to rapidly decrease their emissions. Nearly 8% of the state’s GHG emissions are caused by the heavy-duty transportation sector. We simulate different decarbonization strategies for the heavy-duty fleet using a detailed fleet turnover model paired with an air quality model to track the evolution of the vehicle fleet and the associated greenhouse gas emissions, criteria air pollutant emissions, and air quality and health impacts of each scenario. We find that even a ZEV policy instrument mandating that 100% of heavy-duty vehicles (HDVs) sold are zero-emission vehicles beginning in 2025 would not achieve zero emissions from heavy-duty trucks by 2045 given the slow fleet turnover. In combination with a ZEV sales mandate in 2035, the retirement of vehicles aged 10 years or older beginning in 2040 or earlier would result in zero GHG emissions by 2045. Beginning retirements sooner or retiring younger vehicles as well results in lower cumulative emissions and reduced air quality impacts and health damages. </p>
-		</details>
 
 
  
